plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.9'
}

group 'org.sqar.virtualjtc'
version '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
    sourceCompatibility = '17'
    targetCompatibility = '17'
}

application {
    mainClassName = 'org.sqar.virtualjtc.jtcemu.Main'
}

repositories {
    mavenCentral()
}

javafx {
    version = "21"
    application {
        mainClassName = "org.jens_mueller.jtcemu.platform.fx.Launcher"
        applicationName = 'JTCemuFX'
        modules = [ 'javafx.base','javafx.fxml','javafx.controls','javafx.graphics','javafx.web','javafx.media','javafx.swing' ]
    }
}

dependencies {
    // here starts JavaFX
    implementation 'org.openjfx:javafx:21'

    implementation 'org.openjfx:javafx-base:21'
    implementation 'org.openjfx:javafx-graphics:21'
    implementation 'org.openjfx:javafx-controls:21'
    implementation 'org.openjfx:javafx-fxml:21'
    implementation 'org.openjfx:javafx-swing:21'
    implementation 'org.openjfx:javafx-media:21'
    implementation 'org.openjfx:javafx-web:21'

    testImplementation 'junit:junit:4.12'
}

jar {
    manifest {
        attributes(
                'Main-Class': 'org.jens_mueller.jtcemu.platform.fx.Launcher' // replace with you main class
        )
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
}